test/Fail/Issue7136e.err
Issue7136e.agda:6.21: error: [ParseError]
Illegal pattern synonym argument  x
(Lock annotations not allowed in pattern synonym arguments.)
